[tool.poetry]
name = "datasieve"
version = "0.1.9"
description = "This package implements a flexible data pipeline to help organize row removal (e.g. outlier removal) and feature modification (e.g. PCA)"
authors = ['Robert Caulk']
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
scikit-learn = ">=1.1.3"
pandas = ">=2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
autopep8 = "1.6.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
